--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /apps/joiner
 /deps/deno
 /data/sql/custom/*
+/data/sql/playerbots/*
 /src/server/scripts/Custom/*
 !/src/server/scripts/Custom/README.md
 
